<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".login">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="60dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="28dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext_shape"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="30dp"
        android:background="@drawable/edittext_shape"
        android:elevation="10dp"
        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="MissingConstraints,RtlSymmetry,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/do_you_forgot_your_password"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#F44336"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/singn_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>